# calculator-project

./: .gitignore  .gitlab-ci.yml  Makefile  README.md  pyproject.toml
.github/workflows/: main.yml
src/TestSimpleCalculator_2026_SC.egg-info/: PKG-INFO  SOURCES.txt
src/calculator/: __init__.py  pyproject.toml  simple_calculator.py
tests/: test_simple_calculator.py
