[build-system]
requires =["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "TestSimpleCalculator_2026_SCND"
version = "0.0.2"
authors = [{name= "Sanjay CAND"}]
description = "Simple calculateur for packaging demo"
license = {text = "Unlicense"}
requires-python = ">=3.10"

[project.optional-dependencies]
test = ["pytest>=7.0", "pytest-cov", "pylint", "black", "radon"]

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]